test/negative/014_overload_ambiguous_xmodule.err
014_overload_ambiguous_xmodule.fx:13:9: error: ambiguous call of overloaded 'length': the candidates are equally applicable. Candidates:
 length(string) -> int @ 014_overload_ambiguous_xmodule.fx:12:5
 length(string) -> int @ Builtins.fx:L:C
use a module-qualified call (e.g. Module.length(...)) to select one
 13 | val r = length("abc")
    |         ^~~~~~

1 errors occured during type checking.
